Fix internal line spacing issue in page summary.

--- a/css/base.css
+++ b/css/base.css
@@ -354,6 +354,13 @@ body {
 	display: inline-block;
 	text-align: left;
 }
+.page-summary  > span > p {
+	margin: 0;
+	margin-top: 12px;
+}
+.page-summary  > span > p:first-child {
+	margin-top: 0;
+}
 .page-desc {
 	font-weight: bold;
 }
